# tinyTool

./: CMakeLists.txt  README.md
Calculator/: README.md
Calculator/source/: CMakeLists.txt  add_operator.cpp  add_operator.h  brackets_operator.h  calc_gtest_test.cpp  calc_type_define.h  div_operator.cpp  div_operator.h  main.cpp  mul_operator.cpp  mul_operator.h  parse.cpp  parse.h  sub_operator.cpp  sub_operator.h  token.cpp  token.h  token_number.cpp  token_number.h  token_operator.cpp  token_operator.h
HardWareActiveCode/Code/: Build32.bat  CMakeLists.txt
HardWareActiveCode/Code/Source/: HardInfo.cpp
HardWareActiveCode/doc/: Cmd.txt
LRAnalysisTool/: README.md
LRAnalysisTool/Code/: ActionTable.cpp  ActionTable.h  AnalysisStack.cpp  AnalysisStack.h  CMakeLists.txt  CommonData.h  FileManager.cpp  FileManager.h  Formular.cpp  Formular.h  FormularSet.cpp  FormularSet.h  GotoTable.cpp  GotoTable.h  Item.cpp  Item.h  ItemSet.cpp  ItemSet.h  ItemSetVector.cpp  ItemSetVector.h  LabelSet.cpp  LabelSet.h  Manager.cpp  Manager.h  PreManager.cpp  PreManager.h  Relation.cpp  Relation.h  RelationSet.cpp  RelationSet.h  SourceCodeStream.cpp  SourceCodeStream.h  main.cpp
NetMsgFrame/: CMakeLists.txt
NetMsgFrame/EndServer/: CEndServer.cpp  CEndServer.h  CMakeLists.txt  CServerSess.cpp  CServerSess.h  EndServerMain.cpp
NetMsgFrame/HttpServer/: CAPNsSess.cpp  CAPNsSess.h  CHttpServer.cpp  CHttpServer.h  CMakeLists.txt  CSessManager.cpp  CSessManager.h  CSourceServer.cpp  CSourceServer.h  Server.cpp
NetMsgFrame/HttpServer/other/served/: methods.hpp  methods_handler.cpp  request_parser.hpp  request_parser_impl.cpp  request_parser_impl.hpp  response.cpp  version.hpp
NetMsgFrame/HttpServer/other/served/net/: connection.cpp  connection.hpp  server.cpp  server.hpp
NetMsgFrame/HttpServer/other/served/plugins/: access_log.cpp
NetMsgFrame/MediumServer/: CClientSess.cpp  CClientSess.h  CMakeLists.txt  CMediumServer.cpp  CMediumServer.h  CPushQueue.cpp  CPushQueue.h  CServerSess.cpp  CServerSess.h  MediumServer.cpp
NetMsgFrame/SourceServer/: CClientSess.cpp  CClientSess.h  CMakeLists.txt  CSessManager.cpp  CSessManager.h  CSourceServer.cpp  CSourceServer.h  SourceServerMain.cpp
NetMsgFrame/UnitTest/: CMakeLists.txt  main.cpp
TcpIpLearnLib/: CMakeLists.txt  README.md
TcpIpLearnLib/AnalysisActiveNet/: CMakeLists.txt  MacAddrAnalysis.cpp  MacAddrAnalysis.h  NetProtoPrint.cpp  NetProtoPrint.h  NetProtoStruct.h  basic_dump.cpp
TinyIMDOC/: AboutAuther.html  UpdateLog.html  index.html  search_index.json
TinyIMDOC/chap1/: 1_0_Summary.html  1_1.html  1_1.md  1_2.html  1_2.md  1_3.html  1_3.md  1_4.html  1_4.md
TinyIMDOC/chap10/: 10_0_Summary.html  10_1_创建群组.html  10_1_创建群组.md  10_2_解散群组.html  10_2_解散群组.md  10_3_加入群组.html  10_3_加入群组.md  10_4_退出群组.html  10_4_退出群组.md  10_5_移出群组.html  10_6_转移群主.html  10_7_添加管理员.html  10_8_删除管理员.html  10_9_查找群组.html  10_9_查找群组.md
TinyIMDOC/chap11/: 11_0_Summary.html  11_1_好友发送文本消息.html  11_1_好友发送文本消息.md  11_2_好友发送图片消息.html  11_3_好友发送窗口抖动消息.html  11_4_好友发送文件.html  11_5_好友撤回消息.html
TinyIMDOC/chap12/: 12_0_Summary.html  12_1_群组聊天发送文本消息.html  12_1_群组聊天发送文本消息.md  12_2_群组聊天发送图片消息.html  12_3_群组聊天发送文件.html  12_4_群组聊天撤回消息.html  12_5_群组聊天AT某个人.html
TinyIMDOC/chap13/: 13_0_Summary.html
TinyIMDOC/chap14/: 14_0_Summary.html  14_1_添加好友.html  14_2_删除好友.html  14_3_加入黑名单.html  14_4_移出黑名单.html  14_5_查找好友.html  14_6_修改好友备注.html
TinyIMDOC/chap15/: 15_0_Summary.html  15_1_创建群组.html  15_2_解散群组.html  15_3_加入群组.html  15_4_退出群组.html  15_5_移出群组.html  15_6_转移群主.html  15_7_添加管理员.html  15_8_删除管理员.html  15_9_查找群组.html
TinyIMDOC/chap16/: 16_0_Summary.html  16_1_好友发送文本消息.html  16_2_好友发送图片消息.html  16_3_好友发送窗口抖动消息.html  16_4_好友发送文件.html  16_5_好友撤回消息.html
TinyIMDOC/chap17/: 17_0_Summary.html  17_1_群组聊天发送文本消息.html  17_2_群组聊天发送图片消息.html  17_3_群组聊天发送文件.html  17_4_群组聊天撤回消息.html  17_5_群组聊天AT某个人.html
TinyIMDOC/chap2/: 2_0_Summary.html  2_0_Summary.md  2_1_User_Login.html  2_1_User_Login.md  2_2_User_Logout.html  2_2_User_Logout.md  2_3_Forget_Password.html  2_3_Forget_Password.md  2_4_Reset_Password.html  2_4_Reset_Password.md  2_5_Register_User.html  2_5_Register_User.md  2_6_UnRegister_User.html  2_6_UnRegister_User.md  2_7_Verify_Email.html  2_7_Verify_Email.md  2_8_Multi_Device_Login.html  2_8_Multi_Device_Login.md  2_9_QR_Code_Scan_Login.html  2_9_QR_Code_Scan_Login.md
TinyIMDOC/chap3/: 3_0_Summary.html  3_0_Summary.md  3_1_Add_Friend.html  3_1_Add_Friend.md  3_2_Remove_Friend.html  3_2_Remove_Friend.md  3_3_Add_To_Black_List.html  3_3_Add_To_Black_List.md  3_4_Remove_From_Black_list.html  3_4_Remove_From_Black_list.md  3_5_Find_Friend.html  3_5_Find_Friend.md  3_6_Modify_Friend_Remark.html  3_6_Modify_Friend_Remark.md
TinyIMDOC/chap4/: 4_0_Summary.html  4_1_Create_Group.md  4_2_Destroy_Group.html  4_2_Destroy_Group.md  4_3_Add_To_Group.html  4_3_Add_To_Group.md  4_4_Quit_From_Group.md  4_5_Remove_User_From_Group.md  4_6_Transfer_Owner_To_Other_Users.md  4_7_Add_User_As_Group_Manager.md  4_8_Remove_Group_Manager.md  4_9_Find_Group.md
WeatherService/: README.md
WeatherService/Code/src/DataTransform/: CMakeLists.txt  DataTransform.cpp
WeatherService/Code/src/EmailSender/: CMakeLists.txt  EmailSenderMain.cpp
WeatherService/Code/src/HttpServer/: CHttpServer.cpp  CHttpServer.h  CMakeLists.txt  CSourceServer.cpp  CSourceServer.h  DaemonSvcApp.cpp  DaemonSvcApp.h  HttpServer.cpp
WeatherService/Code/src/HttpServer/other/served/net/: connection.cpp  connection.hpp  server.cpp  server.hpp
WeatherService/Code/src/UnitTest/: CMakeLists.txt  DBMysql_test.cpp  HttpReqRsp_test.cpp  HttpRestful_test.cpp  main.cpp
WeatherService/Code/src/WeatherSpider/: CMakeLists.txt  GetCityCode.cpp  WeatherSpider.cpp
source/: CMakeLists.txt  CMakeLists.txt.in  add_operator.cpp  add_operator.h  brackets_operator.h  calc_type_define.h  calcu_doctest_test.cpp  div_operator.cpp  div_operator.h  main.cpp  mul_operator.h  parse.cpp  parse.h  sub_operator.cpp  sub_operator.h  token.cpp  token.h  token_number.cpp  token_number.h  token_operator.cpp  token_operator.h
(+194 files in other folders)
