cmake_minimum_required(VERSION 3.0)
project(AnalysisActiveNet)
include_directories(./Include/)
link_directories(./Lib/x64/)
link_libraries(Packet.lib wpcap.lib)
link_libraries(ws2_32.lib)
SET(SOURCE_FILE ./basic_dump.cpp)
SET(PROTO_SOURCE ./MacAddrAnalysis.cpp ./NetProtoPrint.cpp)
add_executable(AnalysisNet ${SOURCE_FILE} ${PROTO_SOURCE})